# erase-your-social

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
src/erase_your_social/: __init__.py
src/erase_your_social/x/: __init__.py  delete_tweets.py  session.py  unfollow_users.py  unlike_tweets.py
