[project]
name = "erase-your-social"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Subodh Khanal", email = "skhanal5@terpmail.umd.edu" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
